# ar-physics

./: .gitignore  Cargo.toml  README.md
examples/: car.toml  cloth.toml  container_buckling.toml  esophagus.toml  flow_over_cylinder_2d.toml  flow_over_cylinder_3d.toml  gas_test.toml  ink_drop.toml  interactivity_test.toml  liquid_solid_test.toml  metal_bar.toml  model_import_test.toml  neighbor_lists.rs  plastic_test.toml  raindrop.toml  raindrop_real_time.toml  rayleigh_taylor.toml  rope.toml  siphon.toml  solid_test.toml  solid_test_3D.toml  spinning_ball.toml  stomach.toml  test.rs  test3d.toml  tests.sh  wave_3d.toml  wave_3d_real_time.toml
examples/models/: axels.stl  car.stl  gear.stl  stomach surface.stl  wheels.stl
examples/test_mods/: config.rs  mesh.rs  mod.rs  renderer.rs
src/: ar_physics.rs  profiler.rs
src/soft_body/: kernel.rs  material_region.rs  mod.rs  neighbor_list.rs
src/soft_body/material_region/: interaction.rs  material.rs  mod.rs  region.rs
src/soft_body/particle_state/: buf_vec.rs  mod.rs  particles.rs  shaders.rs
src/soft_body/shaders/: fluid.rs  mod.rs  solid.rs  strain.rs
