[package]
name = "ar-physics"
version = "0.1.0"
authors = ["Joshua Smith"]
edition = "2018"

[lib]
name = "ar_physics"
path = "src/ar_physics.rs"

[dependencies]
macro-program = {path="../macro-program"}
maths-traits = {path="../math-traits"}
numerical-integration = {path="../numerical-integration"}
free-algebra = {path="../free-algebra"}
gl-struct = {path="../gl-struct"}
ar-engine = {path="../ar-engine"}

[dev-dependencies]
glfw = "0.28.0"
rand = "0.5.5"
toml = "0.5"
rayon = "1.1"
stl_io = "0.4"
