[package]
name = "ar-physics"
version = "0.1.0"
authors = ["Joshua Smith <jsmith62831@gmail.com>"]
edition = "2018"

[lib]
name = "ar_physics"
path = "src/ar_physics.rs"

[dependencies]
maths-traits = "0.2"
numerical-integration = "0.0.1"
free-algebra = "0.1"
gl-struct = {path="../gl-struct"}
ar-engine = {path="../ar-engine"}

[dev-dependencies]
glfw = "0.34.0"
rand = "0.5.5"
toml = "0.5"
rayon = "1.1"
stl_io = "0.4"
